test/src/e2e_vm_tests/test_programs/should_pass/language/const_decl_with_call_path/src/test_lib.sw
library test_lib;

pub const NUMBER: u64 = 10;
